# project-tempest

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  PROJECT_TEMPEST.md  PROJECT_TEMPEST_DEMO_SPEC.md  README.md  TESTING.md
.github/workflows/: build-toolchain.yml  ci.yml
Core/: CMakeLists.txt
Core/GameEngine/: CMakeLists.txt
Core/GameEngine/Include/Common/: AudioRequest.h  GameAudio.h  GameDefines.h  GameMemory.h  LocalFileSystem.h  OptionPreferences.h  RandomValue.h
Core/GameEngine/Include/GameClient/: ControlBar.h  GameWindowTransitions.h  MetaEvent.h  Mouse.h  ParticleSys.h  SelectionXlat.h  Smudge.h  View.h  WindowVideoManager.h
Core/GameEngine/Include/GameNetwork/: LANAPI.h  NetCommandMsg.h  NetworkDefs.h  networkutil.h
Core/GameEngine/Include/GameNetwork/WOLBrowser/: WebBrowser.h
Core/GameEngine/Source/Common/: FrameRateLimit.cpp  OptionPreferences.cpp  RandomValue.cpp
Core/GameEngine/Source/Common/Audio/: AudioEventRTS.cpp  AudioRequest.cpp  GameAudio.cpp  GameSounds.cpp
Core/GameEngine/Source/Common/System/: GameMemory.cpp  Radar.cpp
Core/GameEngine/Source/GameClient/: MapUtil.cpp  View.cpp
Core/GameEngine/Source/GameClient/GUI/: GameWindowTransitions.cpp  LoadScreen.cpp
Core/GameEngine/Source/GameClient/Input/: Mouse.cpp
Core/GameEngine/Source/GameClient/MessageStream/: CommandXlat.cpp  HintSpy.cpp  LookAtXlat.cpp  MetaEvent.cpp  PlaceEventTranslator.cpp  SelectionXlat.cpp
Core/GameEngine/Source/GameClient/System/: ParticleSys.cpp
Core/GameEngine/Source/GameLogic/AI/: AIPathfind.cpp
Core/GameEngine/Source/GameLogic/System/: GameLogicDispatch.cpp
Core/GameEngine/Source/GameNetwork/: LANGameInfo.cpp  NetCommandList.cpp  NetCommandMsg.cpp  Network.cpp  NetworkUtil.cpp
Core/GameEngineDevice/: CMakeLists.txt
Core/GameEngineDevice/Include/MilesAudioDevice/: MilesAudioManager.h
Core/GameEngineDevice/Include/W3DDevice/GameClient/: W3DView.h
Core/GameEngineDevice/Source/MilesAudioDevice/: MilesAudioManager.cpp
Core/GameEngineDevice/Source/W3DDevice/GameClient/: BaseHeightMap.cpp  W3DShaderManager.cpp  W3DTreeBuffer.cpp  W3DView.cpp
Core/Libraries/Include/Lib/: BaseType.h
Core/Libraries/Source/WWVegas/WW3D2/: CMakeLists.txt  dx8fvf.h  pointgr.cpp  render2dsentence.h  sortingrenderer.cpp
Core/Libraries/Source/WWVegas/WWDownload/: registry.cpp
Core/Libraries/Source/WWVegas/WWLib/: DbgHelpLoader.h  WWCommon.h  thread.cpp
Core/Libraries/Source/WWVegas/WWMath/: matrix3d.h  wwmath.h
Core/Libraries/Source/debug/: debug.h  debug_debug.cpp
Core/Libraries/Source/profile/: CMakeLists.txt  internal.h  profile.cpp  profile_funclevel.h
Core/Tools/W3DView/: W3DView.cpp
Generals/Code/GameEngine/: CMakeLists.txt
Generals/Code/GameEngine/Include/Common/: GameEngine.h  Geometry.h  GlobalData.h  MessageStream.h  Player.h  Recorder.h  TunnelTracker.h
Generals/Code/GameEngine/Include/GameClient/: GameClient.h  InGameUI.h
Generals/Code/GameEngineDevice/: CMakeLists.txt
GeneralsMD/Code/GameEngine/: CMakeLists.txt
GeneralsMD/Code/GameEngineDevice/: CMakeLists.txt
GeneralsMD/Code/Main/: CMakeLists.txt
ProjectTempest/: CMakeLists.txt  MANUAL-ACCEPTANCE-CHECKLIST.txt  PRIVATE-DEMO-README.txt  README.md  asset-provenance.json  manual-acceptance-observations.example.json  package-contract.json
ProjectTempest/Code/: ProjectTempestDemo.cpp  TempestAccessibility.cpp  TempestAccessibility.h  TempestAudio.cpp  TempestAudio.h  TempestAudioWin32.cpp  TempestInterface.cpp  TempestInterface.h  TempestPresentationD3D8.cpp  TempestPresentationD3D8.h  TempestPresentationShader.h  TempestRuntimeEvidence.cpp  TempestRuntimeEvidence.h  TempestSimulation.cpp  TempestSimulation.h
ProjectTempest/Content/Art/Textures/: ptburn.tga  ptcable.tga  ptcyan.tga  ptmagnta.tga  ptoff.tga  ptrubber.tga  ptsteel.tga  ptwhite.tga
ProjectTempest/Content/Art/W3D/: coil.w3d  courier.w3d  courierd.w3d  drone.w3d  fabricbay.w3d  fabricrig.w3d  harrower.w3d  lancer.w3d  nest.w3d  pylon.w3d  relay.w3d  relaycore.w3d  sentry.w3d  spire.w3d  warden.w3d
ProjectTempest/SourceAssets/Models/Chorus/Drone/: drone-master-v1.blend
ProjectTempest/SourceAssets/Models/Chorus/Harrower/: harrower-master-v1.blend
ProjectTempest/SourceAssets/Models/Chorus/MachineNest/: nest-master-v1.blend
ProjectTempest/SourceAssets/Models/Chorus/SignalPylon/: pylon-master-v1.blend
ProjectTempest/SourceAssets/Models/Chorus/Spire/: spire-master-v1.blend
ProjectTempest/SourceAssets/Models/Chorus/Warden/: warden-master-v1.blend
ProjectTempest/SourceAssets/Models/Freegrid/ArcSentry/: sentry-master-v1.blend
ProjectTempest/SourceAssets/Models/Freegrid/CoilCarrier/: coil-master-v1.blend
ProjectTempest/SourceAssets/Models/Freegrid/Courier/: courier-damaged-v1.blend  courier-master-v1.blend  courier-master-v1.blend1
ProjectTempest/SourceAssets/Models/Freegrid/FabricatorBay/: fabricbay-master-v1.blend
ProjectTempest/SourceAssets/Models/Freegrid/FabricatorRig/: fabricrig-master-v1.blend
ProjectTempest/SourceAssets/Models/Freegrid/LancerCrew/: lancer-master-v1.blend
ProjectTempest/SourceAssets/Models/Freegrid/Relay/: relay-master-v1.blend
ProjectTempest/SourceAssets/Models/Freegrid/RelayCore/: relaycore-master-v1.blend
ProjectTempest/Tests/: TempestHeadlessAcceptance.cpp  TempestPresentationShaderTests.cpp  TempestRuntimeEvidenceTests.cpp  TempestSimulationTests.cpp
cmake/: compilers.cmake  config-build.cmake  miles.cmake
scripts/: analyse-project-tempest-manual-evidence.ps1  assert-project-tempest-artifact-boundary.ps1  assert-project-tempest-private-package.ps1  build-windows.ps1  create-courier-blockout.ps1  create-courier-blockout.py  create-substation-kit.ps1  create-substation-kit.py  create-tempest-audio.py  package-project-tempest-demo.ps1  prepare-w3dview-compat.ps1  test-project-tempest-assets.ps1  test-project-tempest-manual-evidence.ps1  test-project-tempest-no-gui.ps1  test-project-tempest-package.ps1  test-project-tempest-reproducibility.ps1  test-w3d-pipeline.ps1  test-w3d-pipeline.py
scripts/cpp/: unify_move_files.py
(+192 files in other folders)
